2008-07-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-loader.lisp (*contribs*): Added `swank-package-fu'.

2008-07-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-at-list-p): New. Returns t if point is at a list.
	(slime-at-expression-p): New. Similiar to `slime-in-expression-p'.
	(slime-end-of-list): New. Pendant to `slime-beginning-of-list'.

2008-07-19  Tobias C. Rittweiler  <tcr@freebits.de>

	REPL shortcuts now leave an appropriate Common Lisp form in the
	REPL history.

	* slime.el (slime-within-repl-shortcut-handler-p): New global. T
	if truly inside a repl shortcut handler invoked by ,foo on the
	REPL.
	(slime-handle-repl-shortcut): Bind above global appropriatly.
	(slime-repl-shortcut-eval): New; should be used in repl shortcut
	handlers instead of `slime-eval'.
	(slime-repl-shortcut-eval-async): New; should be used in repl
	shortcut handlers instead of `slime-eval-async'.
	(defslime-repl-shortcut): Update docstring.
	(slime-repl-set-package): Use slime-repl-shortcut-eval.
	(slime-set-default-directory): Ditto.
	(slime-sync-package-and-default-directory): Ditto.

2008-07-18  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-recompile-locations): Locations were potentially
	recompiled within a wrong package. Fix that.

2008-07-18  Tobias C. Rittweiler  <tcr@freebits.de>

	An explicit numeric value as prefix-arg given to `C-c C-c' will
	now represent the debug level the defun is compiled with;
	`C-u C-c C-c' defaults to maximum debug like before. (Now also
	works for recompilation commands in xref buffers.)

	* slime.el (slime-compilation-debug-level): Renamed from
	`slime-compile-with-maximum-debug'.
	(slime-normalize-optimization-level): New.
	(slime-compile-defun): Adapted accordingly.
	(slime-compile-region): Ditto.
	(slime-recompile-location): Added setting of debug-level.
	(slime-recompile-locations): Ditto.
	(slime-recompile-xref): Now takes debug-level prefix-arg.
	(slime-recompile-all-xrefs): Ditto.
